--- a/apps/web/src/styles/globals.css
+++ b/apps/web/src/styles/globals.css
@@ -2,69 +2,54 @@
   @tailwind components;
   @tailwind utilities;
 
-  @layer base {
-    :root {
-      --background: 177 34 12;
-      --foreground: 210 40 96;
-
-      --card: 177 34 12;
-      --card-foreground: 201 64 04;
-
-      --popover: 177 34 12;
-      --popover-foreground: 210 40 96;
-
-      --primary: 84 91 78;
-      --primary-foreground: 229 84 5;
-
-      --secondary: 158 16 64;
-      --secondary-foreground: 84 91 78;
-
-      --muted: 158 16 64;
-      --muted-foreground: 158 16 64;
-
-      --accent: 158 16 64;
-      --accent-foreground: 84 91 78;
-
-      --destructive: 0 84.2% 60.2%;
-      --destructive-foreground: 229 84 5;
-
-      --border: 214.3 31.8% 91.4%;
-      --input: 214.3 31.8% 91.4%;
-      --ring: 210 40 96;
-
-      --radius: 0.5rem;
-    }
-
-    .dark {
-      --background: 210 40 96;
-      --foreground: 229 84 5;
-
-      --card: 210 40 96;
-      --card-foreground: 229 84 5;
-
-      --popover: 210 40 96;
-      --popover-foreground: 229 84 5;
-
-      --primary: 229 84 5;
-      --primary-foreground: 84 91 78;
-
-      --secondary: 217.2 32.6% 17.5%;
-      --secondary-foreground: 229 84 5;
-
-      --muted: 217.2 32.6% 17.5%;
-      --muted-foreground: 215 20.2% 65.1%;
-
-      --accent: 217.2 32.6% 17.5%;
-      --accent-foreground: 229 84 5;
-
-      --destructive: 0 62.8% 30.6%;
-      --destructive-foreground: 229 84 5;
-
-      --border: 217.2 32.6% 17.5%;
-      --input: 217.2 32.6% 17.5%;
-      --ring: 212.7 26.8% 83.9%;
-    }
+  
+@layer base {
+  :root {
+    --background: 177 34 12;
+    --foreground: 240 10% 3.9%;
+    --card: 201 64 4;
+    --card-foreground: 201 64 4;
+    --popover: 0 0% 100%;
+    --popover-foreground: 240 10% 3.9%;
+    --primary: 80 80 71;
+    --primary-foreground: 0 0% 98%;
+    --secondary: 158 16 64;
+    --secondary-foreground: 0 0% 98%;
+    --muted: 240 4.8% 95.9%;
+    --muted-foreground: 240 3.8% 46.1%;
+    --accent: 240 4.8% 95.9%;
+    --accent-foreground: 240 5.9% 10%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 0 0% 98%;
+    --border: 240 5.9% 90%;
+    --input: 240 5.9% 90%;
+    --ring: 240 5.9% 10%;
+    --radius: 0.5rem;
   }
+
+  .dark {
+    --background: 177 34 12;
+    --foreground: 0 0% 98%;
+    --card: 201 64 4;
+    --card-foreground: 201 64 4;
+    --popover: 240 10% 3.9%;
+    --popover-foreground: 0 0% 98%;
+    --primary: 80 80 71;
+    --primary-foreground: 0 0% 98%;
+    --secondary: 158 16 64;
+    --secondary-foreground: 0 0% 98%;
+    --muted: 240 3.7% 15.9%;
+    --muted-foreground: 240 5% 64.9%;
+    --accent: 240 3.7% 15.9%;
+    --accent-foreground: 0 0% 98%;
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 0 0% 98%;
+    --border: 240 3.7% 15.9%;
+    --input: 240 3.7% 15.9%;
+    --ring: 240 4.9% 83.9%;
+  }
+}
+
 
   @layer base {
     * {
